# Deduplicator

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init-cluster.sh  pyproject.toml  start-consumer.sh  wait_for_kafka.sh
app/: celery_app.py  config.py  logger_config.py  main.py  tasks.py
app/alembic/: env.py
app/alembic/versions/: 2025_04_11_2359-5edd68505024_initial_migration.py  2025_04_12_1722-facd9a763e79_initial_migration.py
app/api/: endpoints.py  schemas.py
app/deduplicator/: bloom_filter.py  consumer.py  db.py  producer.py
test/: locustfile.py
