[tool.poetry]
name = "app"
version = "0.1.0"
description = "Microservice for deduplication of product events using Redis Bloom Filter"
authors = ["Maria Bondareva <mnikitina2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiokafka = "^0.10.0"
redis = { version = "^4.5.5", extras = ["cluster"] }
python-dotenv = "^1.0.1"
setuptools = "^78.1.0"
sqlalchemy = "^2.0.40"
celery = {extras = ["redis"], version = "^5.3.0"}

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"